--- a/style.css
+++ b/style.css
@@ -14,10 +14,6 @@
     clear: both;
 }
 
-.container{
-    margin: 0 auto;
-}
-
 body{
     position: relative;
 }
@@ -69,7 +65,8 @@ body{
     height: 75px;
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: cyan;
+    margin-left: 0;
+    text-align: left;
 }
 
 /* Container */
@@ -80,32 +77,43 @@ body{
 }
 
 .left-box{
+    position: relative;
     float: left;
     width: 25%;
-    height: 400px;
+    height: 200px;
     margin-top: 20px;
     margin-right: 20px;
     margin-bottom: 20px;
-    background-color: cyan;
+    background-image: url(./images/img-1.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.bold{
+    font-weight: bold;
 }
 
 .middle-box{
     float: left;
     width: calc(50% - 40px);
-    height: 400px;
+    height: 200px;
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: cyan;
+    background-image: url(./images/banner-2.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .right-box{
     float: left;
     width: 25%;
-    height: 400px;
+    height: 200px;
     margin-top: 20px;
     margin-left: 20px;
     margin-bottom: 20px;
-    background-color: cyan;
+    background-image: url(./images/img-3.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 /* Footer */
 
@@ -121,4 +129,10 @@ body{
 .spacing{
     margin: 0;
     margin-top: 40px;
+}
+
+/* Details */
+
+.details{
+    float: left;
 }
