--- a/style.css
+++ b/style.css
@@ -42,7 +42,10 @@ body{
     height: 560px;
     margin-top: 20px;
     border-radius: 15px;
-    background-image: url(./images/banner.jpg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4),  rgba(0, 0, 0, 0.3)), url(./images/banner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
 
 .title{
@@ -84,7 +87,7 @@ body{
     margin-right: 20px;
     margin-bottom: 20px;
     border-radius: 15px;
-    background-image: url(./images/img-1.jpg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4),  rgba(0, 0, 0, 0.4)), url(./images/img-1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -100,7 +103,7 @@ body{
     margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 15px;
-    background-image: url(./images/banner-2.jpg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4),  rgba(0, 0, 0, 0.4)), url(./images/banner-2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -113,7 +116,7 @@ body{
     margin-left: 20px;
     margin-bottom: 20px;
     border-radius: 15px;
-    background-image: url(./images/img-3.jpg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4),  rgba(0, 0, 0, 0.4)), url(./images/img-3.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
